# CPP-SFML-Boilerplate

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
include/: Entity.h  config.h.in
source/: Entity.cpp  main.cpp
